@@ -1,3 +1,10 @@
+2008-12-21  Ryan Lortie  <desrt@desrt.ca>
+
+	Bug 564413 – Icon does not scale like launchers do
+
+	* src/trashapplet.c (trash_applet_size_allocate):  set the size of the
+	icon in the same way that the panel does for launchers.
+
 ==================== 2.25.2 ======================
 
 2008-12-17  William Jon McCann  <jmccann@redhat.com>
